# Series-Temporelles

./: .gitignore  CMakeLists.txt  DistanceMetrics.cpp  DistanceMetrics.h  GaussianGenerator.cpp  GaussianGenerator.h  KNN.cpp  KNN.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h  main.cpp
